sistema d etransito com gravação em arquivo

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//Prj_09022023/src/orientacaoobjeto/sistemaTransito/StartTransito.java=UTF-8
 encoding//sistemaDeVotacao/application/Menu.java=UTF-8
