--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="Prj_09022023/src"/>
 	<classpathentry kind="src" path="sistemaDeVotacao"/>
+	<classpathentry kind="src" path="gravacaoDeDados"/>
 	<classpathentry kind="output" path="Prj_09022023/build/classes"/>
 </classpath>
